# ash

./: .gitignore  Cargo.toml  LICENSE  README.md  test.ash
cash/: CMakeLists.txt  chunk.cpp  compiler.cpp  main.cpp
cashier/: CMakeLists.txt  Cargo.toml  cash.cpp  cash.h  chunk.h  compiler.h  main.cpp  source.cpp  source.h
cashier/src/: cash_file.rs  cash_reader.rs  compiler.rs  lib.rs  main.rs  scope.rs
cashier_old/: CMakeLists.txt  cash.h  cli.cpp  cli.h  compiler.cpp  compiler.h  source.cpp
crates/ash_bytecode/: Cargo.toml
crates/ash_bytecode/src/: chunk.rs  lib.rs  opcode.rs  prelude.rs  value.rs
crates/ash_core/: .gitignore  Cargo.toml
crates/ash_core/src/: ashery.rs  lib.rs  prelude.rs
crates/ash_core/src/common/: context.rs  env.rs  mod.rs
crates/ash_core/src/core/: annotation.rs  context.rs  env.rs  id.rs  mod.rs  source.rs
crates/ash_core/src/hir/: common.rs  desugarer.rs  hir.rs  mod.rs  scope.rs
crates/ash_core/src/ir/: air.rs  ast.rs  bytecode.rs  cash.rs  ir.rs  mir.rs  mod.rs
crates/ash_core/src/lexer/: basic.rs  indent.rs  keyword.rs  lexer.rs  mod.rs  numeric.rs  string.rs  token.rs
crates/ash_core/src/mir/: mir.rs  mod.rs
crates/ash_core/src/parser/: annotation.rs  common.rs  conditional.rs  expr.rs  function.rs  literal.rs  loops.rs  mod.rs  operator.rs  parser.rs  stmt.rs  variable.rs
crates/ash_core/src/resolver/: mod.rs  resolver.rs
crates/ash_core/src/ty/: ast.rs  function.rs  mod.rs  ty.rs  type_system.rs  typing2.rs  value.rs
crates/ash_vm/: Cargo.toml
crates/ash_vm/src/: fault.rs  lib.rs  memory.rs  prelude.rs  vm.rs
crates/svalinn_core/: Cargo.toml
crates/svalinn_core/src/: craftsman.rs  lib.rs  prelude.rs
crates/svalinn_core/src/common/: mod.rs  source.rs
crates/svalinn_core/src/lexer/: basic.rs  indent.rs  keyword.rs  lexer.rs  mod.rs  numeric.rs  string.rs  token.rs
crates/svalinn_core/src/parser/: common.rs  expr.rs  function.rs  mod.rs  operator.rs
crates/svalinn_core/src/ty/: value.rs
examples/: cash_test.ash  code_gen_test.ash  desugar_test.ash  desugar_test_if.ash  desugar_test_loops.ash  resolver_test.ash  test.ash  test.sv
src/: cli.rs  code.rs  main.rs
src/failure/: report.rs
tests/: cash_test.ash  desugar_test_if.ash  main.ash  resolver_test.ash  test.ash
