[package]
name = "ash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vm"]
vm = ["dep:ash_vm"]
debug_info = ["ash_vm?/debug_info"]

[dependencies]
ash_core = { path = "./crates/ash_core" }
argh = "0.1"
ariadne = "0.1"
anyhow = "1.0"
ash_vm = { path = "./crates/ash_vm", optional = true }
cashier = { path = "./cashier" }