[package]
name = "ash_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "8463566" }
regex = "1.6"
once_cell = "1.13"
ash_bytecode = { path = "../ash_bytecode" }