[package]
name = "ash_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "a2e1d27" }
regex = "1.7"
once_cell = "1.13"
ash_bytecode = { path = "../ash_bytecode" }
bincode = "1.3.3"
serde = { version = "1.0.149", features = ["derive"] }